tests/NormalTests/paczka1/fuzzy1/57138090.err
Error in line 12: OngDXD S389 87,4
Error in line 23: CO8jAj S389 66,8
